discussion/kv_engine/156115/156115_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

open a file

Change-Id: I733f300befd5e91dcec5f2ca899540016bd72fb7

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-06-18 16:17:06.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-18 16:18:56.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/ming-test2/524/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/ming-test2/524/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37036/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37036/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31636/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31636/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10675/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10675/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11747/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11747/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12028/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12028/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19619/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10029/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/breakpad.cc:117:24: error: variable "frame" cannot be implicitly captured in a lambda with no capture-default specified [clang-diagnostic-error]
        WRITE_CSTR(fd, frame);
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/breakpad.cc:114:52: note: "frame" declared here
static void write_to_logger(void* ctx, const char* frame) {
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/breakpad.cc:115:20: note: lambda expression begins here
    auto writeFn = [](int fd) {
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/breakpad.cc:170:24: error: variable "descriptor" cannot be implicitly captured in a lambda with no capture-default specified [clang-diagnostic-error]
        WRITE_CSTR(fd, descriptor.path());
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/breakpad.cc:165:52: note: "descriptor" declared here
static bool dumpCallback(const MinidumpDescriptor& descriptor,
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/breakpad.cc:168:20: note: lambda expression begins here
    auto writeFn = [](int fd) {
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/breakpad.cc:174:39: error: use of undeclared identifier "O_CREATE" [clang-diagnostic-error]
    int logFd = open(logPath.c_str(), O_CREATE | O_TRUNC | O_WRONLY, S_IRUSR);
                                      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10029/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/breakpad.cc:117:24:
error: variable "frame" cannot be implicitly captured in a lambda with no capture-default specified [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10029/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11596/ : FAILURE

Compile error at [2021-06-18T16:17:50.315Z] ../kv_engine/utilities/breakpad.cc:117:24:
error: ?frame? is not captured
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11596/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8622/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
